[gd_scene load_steps=11 format=3 uid="uid://dxgcr5j3sb6gj"]

[ext_resource type="Texture2D" uid="uid://7jbofbr1pej5" path="res://asset/64sizelandscapeassets/iso_cube_grey.png" id="1_bn6qc"]
[ext_resource type="Script" uid="uid://boa00i8fsc3d6" path="res://tower/tower.gd" id="1_usulm"]
[ext_resource type="Script" uid="uid://c7qc7rx7pbjj1" path="res://tower/tower_resource.gd" id="2_coqsy"]
[ext_resource type="PackedScene" uid="uid://bsyr6cru2bwlm" path="res://projectile/projectile.tscn" id="2_htvg3"]
[ext_resource type="Texture2D" uid="uid://dfwjk1ryqislq" path="res://asset/64sizelandscapeassets/iso_cube_right_coral_triangle.png" id="2_usulm"]
[ext_resource type="Script" uid="uid://cr6h3lmmkve1q" path="res://tower/tower_visuals.gd" id="4_uxamf"]
[ext_resource type="Script" uid="uid://cwn7yl6tr5edg" path="res://tower/tower_hover.gd" id="6_0ule7"]
[ext_resource type="Script" uid="uid://n2hexe6vpm4t" path="res://tower/tower_upgrades.gd" id="8_qltw4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ule7"]
size = Vector2(520, 312)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_coqsy"]
size = Vector2(64, 96)

[node name="Tower" type="Node2D" node_paths=PackedStringArray("upgrade_data")]
y_sort_enabled = true
script = ExtResource("1_usulm")
resource = ExtResource("2_coqsy")
upgrade_data = NodePath("TowerUpgrades")
projectile_scene = ExtResource("2_htvg3")

[node name="AttackRange" type="Area2D" parent="."]
monitorable = false

[node name="RangeShape" type="CollisionShape2D" parent="AttackRange"]
position = Vector2(0, -80)
shape = SubResource("RectangleShape2D_0ule7")

[node name="Visuals" type="Node2D" parent="." node_paths=PackedStringArray("upgradable_sprites")]
script = ExtResource("4_uxamf")
upgradable_sprites = [NodePath("Sprite2D3"), NodePath("Sprite2D4"), NodePath("Sprite2D5")]

[node name="Sprite2D3" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_bn6qc")
offset = Vector2(0, -32)

[node name="Sprite2D4" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_bn6qc")
offset = Vector2(0, -64)

[node name="Sprite2D5" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_bn6qc")
offset = Vector2(0, -96)

[node name="Sprite2D6" type="Sprite2D" parent="Visuals"]
texture = ExtResource("2_usulm")
offset = Vector2(0, -128)

[node name="MouseHitBox" type="Area2D" parent="."]
script = ExtResource("6_0ule7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseHitBox"]
position = Vector2(0, -64)
shape = SubResource("RectangleShape2D_coqsy")

[node name="ClicksEnabledTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[node name="TowerUpgrades" type="Node2D" parent="."]
script = ExtResource("8_qltw4")

[connection signal="input_event" from="MouseHitBox" to="MouseHitBox" method="_on_input_event"]
[connection signal="mouse_entered" from="MouseHitBox" to="." method="on_mouse_entered"]
[connection signal="timeout" from="ClicksEnabledTimer" to="." method="_on_PlacementCooldownTimer_timeout"]
